--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,7 @@ services:
   shop-survey:
     build: .
     command: bash -c "
-      while !</dev/tcp/db/5432; do sleep 1; done; python manage.py migrate
-      && pytest --cov application/users/
+      python manage.py runserver 0.0.0.0:8000
       "
     volumes:
       - .:/code
